--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ UserSettings/
 *.swp
 .DS_Store
 Packages/com.ptc.vuforia.engine-11.3.4.tgz
+Packages/com.ptc.vuforia.engine-11.3.5.tgz
+Packages/com.ptc.vuforia.engine-11.3.6.tgz
+Packages/com.ptc.vuforia.engine-11.3.7.tgz
+Packages/com.ptc.vuforia.engine-11.3.8.tgz
+Packages/com.ptc.vuforia.engine-11.3.9.tgz
+Packages/com.ptc.vuforia.engine-11.4.0.tgz
+Packages/com.ptc.vuforia.engine-11.4.1.tgz
+QCAR/somedata16
